#2818 [Fixed] Card: Block-end spacing too small

--- a/packages/dso-toolkit/src/components/card/card.scss
+++ b/packages/dso-toolkit/src/components/card/card.scss
@@ -32,6 +32,10 @@
     :first-child {
       margin-block-start: 0;
     }
+
+    :last-child {
+      margin-block-end: 0;
+    }
   }
 
   .dso-selectable {
@@ -69,6 +73,12 @@ dso-card {
     }
   }
 
+  div[slot="content"] {
+    --_dt-rich-content-margin-block: #{units.$u1};
+    --_dt-rich-content-margin-block-end: 0;
+    --_dt-rich-content-margin-block-start: 0;
+  }
+
   dso-selectable {
     label {
       font-size: 0;
@@ -77,7 +87,7 @@ dso-card {
 }
 
 .dso-card-container {
-  padding-block: units.$u2 units.$u1;
+  padding-block: units.$u2;
   padding-inline: units.$u2;
   inline-size: 100%;
 
